*Empty MediaWiki Message*

--- a/Суахили_(кыв).mw
+++ b/Суахили_(кыв).mw
@@ -69,6 +69,11 @@
 
 == Ыстӧдъяс ==
 
+* [http://www.kamusiproject.org Kamusi Project]
+* [http://bongoradio.com:8000/listen.pls Интернет-радио на языке суахили (слушать 128кб/с)]
+* [http://www.andein.ru/articles/inm_suahili.html Немного о системе личных имён суахили]
+* [http://muzungu.mylivepage.ru/wiki/1887_Общие/1540_Изучение_суахили Материалы по изучению языка суахили (разговорник, словари, учебники на русском языке)]
+* [http://suahili-uchim.narod2.ru/ Сайт, посвящённый языку суахили]
 * [http://llmap.org/languages/swh.html Visit LL-Map link for more information on Swahili]
 * [http://multitree.org/codes/swh Visit MultiTree for more information on Swahili]
 * [http://www.ethnologue.com/show_language.asp?code=swh Ethnologue report on Swahili]; [http://www.ethnologue.com/show_language.asp?code=swc Ethnologue report on Swahili, Congo]
