--- a/Суахили_(кыв).mw
+++ b/Суахили_(кыв).mw
@@ -2,8 +2,8 @@
 '''Суахили''' (''kiswahili'') — тайӧ бенуэ-конго (банту) кыв. Танзанияын, Кенияын да Угандаын каналан кыв. Анбур — латин, важӧн араб.
 
 == Суахили анбур ==
-[[Файл:Swahili-pn.jpg|мини|Суахили латин анбур]]
-[[Файл:Zanzibar-pysa-coin.jpg|мини|Суахили араб анбур]]
+[[Файл:Swahili-pn.jpg|мини|Суахили латин анбурӧн гижӧд]]
+[[Файл:Zanzibar-pysa-coin.jpg|мини|Суахили араб анбурӧн гижӧд]]
 
 {|class=wikitable
 !Араб !!Латин
