--- a/Айму_вӧсна_Ыджыд_тыш.mw
+++ b/Айму_вӧсна_Ыджыд_тыш.mw
@@ -1,3 +1,38 @@
-{{Delete|No useful content}} 
+'''Айму вӧсна Ыджыд тыш''' ([[1941]]—[[1945]]) — [[СССР|СССР-лӧн]] вир кисьтана тыш [[Коймӧд рейх|нацистскӧй Германиякӧд]] да сылӧн союзникъяскӧд: [[Болгария]], [[Венгрия]], [[Италия]], [[Румыния]], [[Словакия]], [[Финляндия]], [[Хорватия]].
 
-че сука?
+== Видзӧдӧй сідзжӧ ==
+* [[Комиын Слава ордена тыр кавалеръяс]]
+* [[Комиын СССР-са геройяс]]
+
+[[Категория:Айму вӧсна Ыджыд тыш]]
+
+[[az:Böyük Vətən müharibəsi]]
+[[be:Вялікая Айчынная вайна 1941-1945]]
+[[be-x-old:Вялікая Айчынная вайна]]
+[[bg:Германо-съветска война]]
+[[cs:Východní fronta (druhá světová válka)]]
+[[cv:Тăван Çĕршывăн Аслă вăрçи]]
+[[de:Deutsch-Sowjetischer Krieg]]
+[[el:Ανατολικό μέτωπο (Β' Παγκόσμιος Πόλεμος)]]
+[[en:Great Patriotic War (term)]]
+[[eo:Granda patriota milito]]
+[[es:Gran Guerra Patria]]
+[[et:Suur Isamaasõda]]
+[[fi:Suuri isänmaallinen sota]]
+[[hy:Հայրենական Մեծ Պատերազմ]]
+[[ja:大祖国戦争]]
+[[ka:დიდი სამამულო ომი]]
+[[kk:Ұлы Отан соғысы]]
+[[la:Bellum Magnum Patrium]]
+[[lt:Didysis Tėvynės karas]]
+[[lv:Lielais Tēvijas karš]]
+[[mhr:Кугу Авамланде Сар]]
+[[nl:Grote Vaderlandse Oorlog]]
+[[pl:Wielka Wojna Ojczyźniana]]
+[[pt:Grande Guerra Patriótica]]
+[[ru:Великая Отечественная война]]
+[[sk:Veľká vlastenecká vojna]]
+[[sv:Stora fosterländska kriget]]
+[[tr:Büyük Vatanseverlik Savaşı]]
+[[tt:Бөек Ватан сугышы]]
+[[uk:Німецько-радянська війна]]
