--- a/Киняргванда_(кыв).mw
+++ b/Киняргванда_(кыв).mw
@@ -30,7 +30,39 @@
 | '''''cw''''' || /tʃkw/
 |-
 | '''''by''''' || /bɟ/
-|}	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	
+|}
+
+== Лыдакывъяс ==
+
+:rimwe – ӧти
+:kabiri – кык
+:gatatu – куим
+:kane – нёль
+:gatanu – вит
+:gatandatu – квайт
+:karindwi – сизим
+:umunani – кӧкъямыс
+:icyenda – ӧкмыс
+:icumi – дас
+:cumi na rimwe – дас ӧти
+:cumi na kaviri – дас кык
+:cumi na gatatu – дас куим
+:cumi na kane – дас нёль
+:cumi na gatanu – дас вит
+:cumi na gatandatu – дас квайт
+:cumi na karindwi – дас сизим
+:cumi n’umunani – дас кӧкъямыс
+:cumi n’icyenda – дас ӧкмыс
+:makumyabiri – кызь
+:mirongo itatu – комын
+:mirongo ine – нелямын
+:mirongo itanu – ветымын
+:mirongo itandatu – квайтымын
+:mirongo irindwi – сизимдас
+:mirongo inani – кӧкъямысдас
+:mirongo cyenda – ӧкмысдас
+:ijana – сё
+:igihumbi – сюрс
 
 == Ыстӧдъяс ==
 
