*Empty MediaWiki Message*

--- a/Луганда_(кыв).mw
+++ b/Луганда_(кыв).mw
@@ -1,4 +1,5 @@
-'''Луганда''' (''Luganda, Oluganda'' [oluɡaːnda]) — тайӧ Угандаын. Анбур — латин.
+[[Файл:Languages of Uganda.png|thumb|left|Угандаын банту кывъяс]]
+'''Луганда''' (''Luganda, Oluganda'' [oluɡaːnda]) — тайӧ Угандаын банту кыв. Анбур — латин.
 
 == Луганда анбур ==
 
@@ -6,69 +7,102 @@
 |-
 ! Шыпас !! Ним !! Шуанног
 |-
-| Aa || a || ''/a/''
+| '''Aa''' || a || ''/a/''
 |-
-| Bb || bba || ''/b/''
+| '''Bb''' || bba || ''/b/''
 |-
-| Cc || cca || ''/c/''
+| '''Cc''' || cca || ''/c/''
 |-
-| Dd || dda || ''/d/''
+| '''Dd''' || dda || ''/d/''
 |-
-| Ee || e || ''/e/''
+| '''Ee''' || e || ''/e/''
 |-
-| Ff || ffa || ''/f/''
+| '''Ff''' || ffa || ''/f/''
 |-
-| Gg || gga || ''/ɡ/'', ''/ɟ/'', ''/dʒ/''
+| '''Gg''' || gga || ''/ɡ/'', ''/ɟ/'', ''/dʒ/''
 |-
-| Hh || ha || ''/h/''
+| '''Hh''' || ha || ''/h/''
 |-
-| Ii || yi || ''/i/''
+| '''Ii''' || yi || ''/i/''
 |-
-| Jj || jja || ''/ɟ/''
+| '''Jj''' || jja || ''/ɟ/''
 |-
-| Kk || kka || ''/k/'', ''/c/'', ''/tʃ/''
+| '''Kk''' || kka || ''/k/'', ''/c/'', ''/tʃ/''
 |-
-| Ll || la || ''/l/''
+| '''Ll''' || la || ''/l/''
 |-
-| Mm || mma || ''/m/''
+| '''Mm''' || mma || ''/m/''
 |-
-| Nn || nna || ''/n/''
+| '''Nn''' || nna || ''/n/''
 |-
-| NY ny || nnya, nna-ya || ''/ɲ/''
+| '''NY ny''' || nnya, nna-ya || ''/ɲ/''
 |-
-| Ŋŋ || ŋŋa || ''/ŋ/''
+| '''Ŋŋ''' || ŋŋa || ''/ŋ/''
 |-
-| Oo || o || ''/o/''
+| '''Oo''' || o || ''/o/''
 |-
-| Pp || ppa || ''/p/''
+| '''Pp''' || ppa || ''/p/''
 |-
-| Qq || - || ''/k/''
+| '''Qq''' || - || ''/k/''
 |-
-| Rr || eri || ''/l/''
+| '''Rr''' || eri || ''/l/''
 |-
-| Ss || ssa || ''/s/''
+| '''Ss''' || ssa || ''/s/''
 |-
-| Tt || tta || ''/t/''
+| '''Tt''' || tta || ''/t/''
 |-
-| Uu || wu || ''/u/''
+| '''Uu''' || wu || ''/u/''
 |-
-| Vv || vva || ''/v/''
+| '''Vv''' || vva || ''/v/''
 |-
-| Ww || wa || ''/w/''
+| '''Ww''' || wa || ''/w/''
 |-
-| Xx || - || ''/ks/''
+| '''Xx''' || - || ''/ks/''
 |-
-| Yy || ya || ''/j/''
+| '''Yy''' || ya || ''/j/''
 |-
-| Zz || zza || ''/z/''
+| '''Zz''' || zza || ''/z/''
 |}
 
 == Ыстӧдъяс ==
 
-
+* [http://www.ethnologue.com/show_language.asp?code=lug Ethnologue]
+* [http://www.linguistics.berkeley.edu/~hyman/Luganda_Word_Paper.pdf Статья]
+* [http://www.buganda.com/luganda.htm Подробная страница о языке луганда] 
+* [http://www.websters-online-dictionary.org/definition/Luganda-english/ Небольшой луганда-английский словарь]
+* [http://eric.ed.gov:80/ERICWebPortal/Home.portal?_nfpb=true&ERICExtSearch_SearchValue_0=ED402762&ERICExtSearch_SearchType_0=kw&_pageLabel=RecordDetails&objectId=0900000b80130b7f Учебное пособие по луганда] 
+* [http://goto.glocalnet.net/maho/webresources/bantuj.html Набор ссылок]
 
 {{Stub}}
 
 [[Категория:Кыв]]
 [[Категория:Нигер-конго кывъяс]]
 [[Категория:Банту кывъяс]]
+
+[[br:Gandaeg]]
+[[ca:Ganda]]
+[[cs:Gandština]]
+[[de:Luganda]]
+[[en:Luganda]]
+[[eo:Ganda lingvo]]
+[[es:Idioma luganda]]
+[[fi:Gandan kieli]]
+[[fr:Luganda]]
+[[gl:Lingua luganda]]
+[[he:לוגנדה]]
+[[id:Bahasa Luganda]]
+[[it:Lingua luganda]]
+[[ja:ルガンダ語]]
+[[ku:Luganda]]
+[[nl:Luganda]]
+[[no:Luganda]]
+[[pl:Język luganda]]
+[[pms:Lenga Ganda]]
+[[pt:Língua luganda]]
+[[qu:Ganda simi]]
+[[ro:Ganda]]
+[[sv:Luganda]]
+[[sw:Kiganda (lugha)]]
+[[ta:ஒலுகாந்த மொழி]]
+[[uk:Луганда]]
+[[zh:卢干达语]]
