--- a/Коми_кыв.mw
+++ b/Коми_кыв.mw
@@ -124,6 +124,8 @@
 
 * [[Би кинь (журнал)|Би кинь]]
 
+* [[Чужан кыв (журнал)|Чужан кыв]]
+
 * [[Чушканзi (журнал)|Чушканзi]]
 
 * [[Арт (журнал)|Арт]]
