--- a/Куратов_Ӧльӧш_Вань.mw
+++ b/Куратов_Ӧльӧш_Вань.mw
@@ -1,27 +1,62 @@
-[[Изображение:Kuratov.jpg|thumb|300px|Куратов Ӧльӧш Вань]]
-'''Куратов Ӧльӧш Вань''' {{lang-ru|Куратов Иван Алексеевич}} ([[1839]]–[[1875]]) - медводдза [[коми поэт]], [[коми литература]]лы подув пуктысь.
+[[Изображение:Kuratov.jpg|thumb|300px|Куратов Иван Алексеевич [[1839]]–[[1875]]) – коми литературалы подув пуктысь]]
+'''Куратов Ӧльӧш Вань''' {{lang-ru|Куратов Иван Алексеевич}} ([[1839]]–[[1875]]) – медводдза [[коми поэт]], [[коми литература]]лы подув пуктысь.
 
-* [[1839]], [[18 сора|сора 18 лун]] - чужис [[Вӧлӧгда губерния|Вӧлӧгда губерниялӧн]] [[Усть–Сысольск уезд|Усть–Сысольск уездса]] [[Кебра]] сиктын (ӧнi [[Коми Республика|Коми Республикаса]] [[Сыктыв район|Сыктыв районлöн]] [[Кебра]] сикт).
+== Олан туй ==
+* [[1839]], [[18 сора|сора тӧлысь 18 лун]] – чужис [[Вӧлӧгда губерния|Вӧлӧгда губерниялӧн]] [[Усть–Сысольск уезд|Усть–Сысольск уездса]] Кебра [[сикт]]ын (ӧнi [[Коми Республика|Коми Республикаса]] [[Сыктыв район|Сыктыв районлöн]] [[Куратов (Сыктыв)|Куратов]] [[сикт]]).
+* [[1850 во|1850]]–[[1860 во|1860]]–öд воясö велöдчис [[Яренск|Яренскса]] духовнöй училищеын да Вӧлӧгдаса духовнӧй семинарияын. Ветлiс [[Канкар|Канкарӧ]], но водзö велöдчöмыс эз артмы сьöм абутöм вöсна. 
+* [[1861 во|1861]]–[[1865 во|1865]]–öд воясö уджалiс велöдысьöн Усть–Сысольскса духовно–приходскöй училищеын. 
+* [[1866 во|1866]]–öд воö [[Казан|Казанын]] аудиторъясöс дасьтан школа помалöм бöрын (военнöй юрист) ыстiсны уджавны [[Семипалатинск|Семипалатинскö]], во мысти вуджöдiсны [[Семиреченскöй обласьт|Семиреченскöй обласьтса]] Верный карö (öнi [[Алматы]], [[Казахстан]]). 
+* [[1871 во|1871]]–öд восянь уджалiс чиновникöн губернатор правлениеын.
+* [[1875 во|1875]], [[29 вӧльгым|вӧльгым тӧлысь 29 лун]] – Иван Куратов кулiс 36 арöсöн [[Верный]] карын.
 
-1850–1860–öд воясö велöдчис [[Яренск|Яренскса]] духовнöй училищеын да Вӧлӧгдаса духовнӧй семинарияын. Ветлiс [[Канкар|Канкарӧ]], но водзö велöдчöмыс эз артмы сьöм абутöм вöсна. 
-
-1861–1865–öд воясö уджалiс велöдысьöн Усть–Сысольскса духовно–приходскöй училищеын. 
-
-1866–öд воö [[Казан|Казанын]] аудиторъясöс дасьтан школа помалöм бöрын (военнöй юрист) ыстiсны уджавны [[Семипалатинск|Семипалатинскö]], во мысти вуджöдiсны [[Семиреченскöй обласьт|Семиреченскöй обласьтса]] Верный карö (öнi [[Алматы]], [[Казахстан]]). 
-
-1871–öд восянь уджалiс чиновникöн губернатор правлениеын.
-
+== Гижан удж ==
 Иван Куратов – медводдза коми поэт, коми литературалы подув пуктысь. Кывбуръяс босьтчис гижны Яренскын на. Поэт ас водзас пуктiс ыджыд мог – велöдны коми йöзöс да висьтавны налöн олöм йылысь. Коми йöзлысь ХIХ–öд нэмса олöмсö петкöдлiс "Закар ордын", "Понкöд", "Гöль зон", "Пемыд", "Выль сьыланкыв" да мукöд кывбуръясын. Йöзлысь оласногсö восьтic "Коми бал", "Яг морт", "Важся коми войтырлöн кодралöм" гижöдъясын.
 
-Иван Куратов вуджöдic [[роч]] да [[Рытыв Европа]]са поэтъяслысь кывбуръяс, кыдз ученöй–лингвист лöсьöдiс [[коми грамматика]]. 
+Иван Куратов вуджöдic [[Рочму|роч]] да [[Рытыв Европа]]са поэтъяслысь кывбуръяс, кыдз ученöй–лингвист лöсьöдiс [[коми грамматика]]. 
 
-[[1866]]–öд воын [["Вологодские губернские ведомости"]] газетын И.Куратов йöзöдiс статья "Зырянские песни".  Уджас пыртiс ассьыс вит [[кывбур]], но кипассö эз пукты. 
+[[1866 во|1866]]–öд воын "[[Вологодские губернские ведомости]]" газетын вӧлі йöзöдӧма "Зырянские песни" статья. Чайтӧны, мый статьясӧ дасьтіс Иван Куратов. Уджас пыртӧма ассьыс вит [[кывбур]], но кипассö абу пуктӧма. 
 
-Поэтлöн нимыс лои паськыда тöдса [[1917]]–öд вося Октябр революция бöрын. Медводдзаысь тöдлытöм коми поэт йылысь [[1923]]–öд воö юöртic [["Парма ёль"]] журнал. [[1926]]–öд воын "Коми гижысьяс" небöгын вöлi йöзöдöма кöкъямыс кывбур. 
+Поэтлöн нимыс лои паськыда тöдса [[1917]]–öд вося Октябр революция бöрын. Медводдзаысь тöдтöм коми поэт йылысь [[1923]]–öд воö юöртic [[Парма ёль (журнал)|"Парма ёль"]] журнал. [[1926]]–öд воын "Коми гижысьяс" небöгын вöлi йöзöдöма кöкъямыс кывбур. 
 
 Поэтлöн 100 во тыригкежлö, [[1939]] воын, [[Коми небöг лэдзанiн]]ын петiс кык небöгö öтувтöм гижöд чукöр.
 
-* [[1875]], [[29 вӧльгым|вӧльгым 29 лун]] - Иван Куратов кулiс 36 арöсöн [[Верный]] карын.
+== Небöгъяс ==
+=== Комиöн ===
+* Гижöд чукöр (1850-1870 вояс) / Ред. И. Оботурова; лöсьöдiс И. Оботуров. – [[Сыктывкар]]: [[Коми небöг лэдзанiн|Коми-гиз]], [[1932]]. – 89 л.б.
+* Менам муза: стихотворениеяс / Ред. [[Конюхов Дмитрий Васильевич|Д. Конюхов]]. – [[Сыктывкар]]: [[Коми небöг лэдзанiн|Коми Госиздат]], [[1939]]. – 102 л.б.
+* [Собрание сочинений]: в 2 т. – [[Сыктывкар]]: [[Коми небöг лэдзанiн|Коми Госиздат]], [[1939]]. – Т. 1: Художественнöй произведениеяс / Ред.: [[Доронин Павел Григорьевич|П. Г.Доронин]], [[Конюхов Дмитрий Васильевич|Д. Конюхов]]. – 323 л.б.
+* [Собрание сочинений]: в 2 т. – [[Сыктывкар]]: [[Коми небöг лэдзанiн|Коми Госиздат]], [[1939]]. – Т. 2: Лингвистические работы / Отв. по вып. [[Вежев Александр Александрович|А.А. Вежев]]. – 135 с.
+* Борйöм гижöдъяс / Ред. [[Плесовский Фёдор Васильевич|Ф. В. Плесовский]]; лöсьöдiс [[Доронин Павел Григорьевич|П. Г.Доронин]]. – [[Сыктывкар]]: [[Коми небöг лэдзанiн|Коми Госиздат]], [[1951]]. – 168 л.б.
+* Сьылан менам, сьылан: [кывбуръяс] / Лöсьöдiс [[Раевский Степан Семёнович|С.С. Раевский]]; серпасалiс С. Холопов. – [[Сыктывкар]]: [[Коми небöг лэдзанiн|Коми кн. изд-во]], [[1975]]. – 108 л.б.
+* Менам муза : художественнöй гижöд чукöр / Ред.: [[Попов Владимир Александрович|В. А. Попов]], науч. ред. [[Илля Вась|В. И. Лыткин]]; лöсьöдiс, гижис водзкыв, коммент. [[Гуляев Евгений Семёнович|Е. С. Гуляев]]; роч кыв вылын гижöм кывбуръяссö да на дiнö коммент. лöсьöдiс [[Фёдорова Анна Николаевна|А.Н. Фёдорова]]; серпасалic [[Мошев Аркадий Васильевич|А.В. Мошев]]. – [[Сыктывкар]]: [[Коми небöг лэдзанiн|Коми кн. изд-во]], [[1979]]. – 605 л.б.
+* Сьылан менам, сьылан!: кывбуръяс / Ред. [[Попов Владимир Александрович|В.А. Попов]]; серпасалiс С. А. Холопов. – [[Сыктывкар]]: [[Коми небöг лэдзанiн|Коми кн. изд-во]], [[1979]]. – 45 л.б.
+* Коми гор: кывбуръяс / Худож. В.Б. Осипов. – [[Сыктывкар]]: [[Коми небöг лэдзанiн|Коми кн. изд-во]], [[1985]]. – 157 л.б.
+* Коми гор: художественнöй гижöд чукöр / Ред. [[Рочев Юрий Герасимович|Ю.Г. Рочев]]; водзкывсö да примеч. гижис [[Мартынов Валерий Иванович|В. И. Мартынов;]] серпасалiс В.Б. Осипов. – [[Сыктывкар]]: [[Коми небöг лэдзанiн|Коми кн. изд-во]], [[1989]]. – 439 л.б.
+* Менам муза / Лöсьöдiсны: Б. Хоменко, К. Хоменко; отв. ред. [[Юшков Геннадий Анатольевич|Г.А. Юшков]]; серпасалic В.Б. Осипов. – [[Сыктывкар]]: [[Коми небöг лэдзанiн|Коми кн. изд-во]],[[1989]]. – 102 л.б.
+* Ой, олöм, олöм... : [кывбуръяс, вуджöдöмъяс] / Лöсьöдiсны: [[Дёмин Владимир Николаевич|В.Н. Дёмин]], Д.М. Леканов; серпасалic В. Б. Осипов; ред. М.Ю. Васютов. – [[Сыктывкар]]: [[Коми небöг лэдзанiн|Коми кн. изд-во]], [[1989]]. – 174 л.б.
+* Тi кöть шудаöсьджык лоöй!: кывбурьяс, поэмаяс / Лöсьöдiс [[Тимин Владимир Васильевич|В. В. Тимин]]; серпасалiс Г.Н. Шарипков; ред. [[Козлова Елена Васильевна|Е.В. Ветошкина (Козлова)]]; Союз писателей Республики Коми. – [[Сыктывкар]]: [[Коми гижысь котыр]], [[2009]]. – 286 л.б.
+
+=== Рочӧн ===
+=== И.А. Куратовлӧн вуджӧдӧмъяс ===
+=== И.А. Куратовлӧн кывбуръясыс суйӧрсайса кыв вылын ===
+=== И.А. Куратовлӧн кывбуръяс вылӧ сьыланкывъяс ===
+== И.А. Куратовлӧн олӧм да удж йывсьыс ==
+=== Комиӧн ===
+=== Рочӧн ===
+== Паметь ==
+
+== Ӧшмӧсъяс ==
+* [http://www.nbrkomi.ru/main/ Коми Республикаса Национальнӧй библиотека]
+* http://foto11.com/komi/writer/kuratov.htm
+* http://www.pedcollkomi.ru/colledge/kuratov.php
+* http://dic.academic.ru/dic.nsf/enc_biography/66560
+* http://www.cultinfo.ru/fulltext/1/001/008/067/584.htm
+* http://www.tomovl.ru/komi/kyratov.htm
+* http://www.gazeta-respublika.ru/article.php/19689
+* http://www.artlad.ru/magazine/all/310/312/369/385
+* http://prostor.ucoz.ru/publ/23-1-0-1484
+* http://www.komi.com/ndbmarshak/akcia.htm
+
 
 [[Категория:Персоналия:Коми]]
 [[Категория:Персоналия анбурӧд]]
