*Empty MediaWiki Message*

--- a/Куратов_Ӧльӧш_Вань.mw
+++ b/Куратов_Ӧльӧш_Вань.mw
@@ -44,9 +44,13 @@
 === Комиӧн ===
 === Рочӧн ===
 == Паметь ==
+[[Файл:1989 CPA 6082.jpg|200 px|right|thumb|[[СССР]]-са пошта марка вылын И.А. Куратов, [[1989]] во.]]
+* [[1989]] воын [[СССР]]-ын вӧлі лэдзӧма Иван Куратовлы сиӧм пошта марка.
+* [[2009]] вося [[2 йирым|йирым тӧлысь 2 лунӧ]] [[Коми Республикаса опера да балет театр]]ын медводдзаысь петкӧдлісны  [[Куратов (опера)|"Куратов"]] опера; шыладыс Сергей Носковлӧн, либреттоыс [[Ванеев Альберт Егорович|Альберт Ванеевлӧн]] да Сергей Носковлӧн. 
 
 == Ӧшмӧсъяс ==
 * [http://www.nbrkomi.ru/main/ Коми Республикаса Национальнӧй библиотека]
+* [[www.komiinform.ru/news/59256/|Премьера первой оперы на национальном языке состоялась в Коми]]
 * http://foto11.com/komi/writer/kuratov.htm
 * http://www.pedcollkomi.ru/colledge/kuratov.php
 * http://dic.academic.ru/dic.nsf/enc_biography/66560
@@ -56,7 +60,9 @@
 * http://www.artlad.ru/magazine/all/310/312/369/385
 * http://prostor.ucoz.ru/publ/23-1-0-1484
 * http://www.komi.com/ndbmarshak/akcia.htm
-
+* [http://www.youtube.com/user/sergenoskov "Куратов" операысь видео-юкӧнъяс]
+* [http://sergeinoskov.ucoz.ru/index/muzykalnye_video/0-16 "Куратов" операысь видео-юкӧнъяс, премьеравывса видеогижӧд]
+* [http://sergeinoskov.ucoz.ru/index/opery/0-8 Сергей Носковлӧн сайт вывсьыс "Куратов" опера дорӧ шыладысь юкӧнъяс]
 
 [[Категория:Персоналия:Коми]]
 [[Категория:Персоналия анбурӧд]]
