*Empty MediaWiki Message*

--- a/Луганда_(кыв).mw
+++ b/Луганда_(кыв).mw
@@ -1,5 +1,5 @@
-[[Файл:Languages of Uganda.png|thumb|left|Угандаын банту кывъяс]]
-'''Луганда''' (''Luganda, Oluganda'' [oluɡaːnda]) — тайӧ Угандаын банту кыв. Анбур — латин.
+[[Файл:Languages of Uganda.png|thumb|Угандаын банту кывъяс]]
+'''Луганда''' (''Luganda, Oluganda'' [oluɡaːnda]), сідзжӧ '''ганда''' — тайӧ Угандаын банту кыв. Анбур — латин.
 
 == Луганда анбур ==
 
