*Empty MediaWiki Message*

--- a/Ельцова_Елена_Власовна.mw
+++ b/Ельцова_Елена_Власовна.mw
@@ -35,4 +35,10 @@
 * [http://ratatoulha.chez-alice.fr/komi/alona_jelcova.html Е.В. Ельцовалöн француз кыв вылö вуджöдöм кывбуръяс]
 * [http://www.finnougoria.ru/logos/lit_kritika/2309/25424 Малева Анастасия. Особенности художественного воплощения мироосвоения лирической героини Алены Ельцовой]
 
+[[Категория:Персоналия:Коми]]
+[[Категория:Персоналия анбурӧд]]
+[[Категория:Коми гижысь]]
+[[Категория:Коми туялысьяс]]
+[[Категория:Коми литература туялысьяс]]
+
 [[koi:Ельцова Елена Власовна]]
