--- a/Ельцова_Елена_Власовна.mw
+++ b/Ельцова_Елена_Власовна.mw
@@ -38,7 +38,7 @@
 [[Категория:Персоналия:Коми]]
 [[Категория:Персоналия анбурӧд]]
 [[Категория:Коми гижысь]]
-[[Категория:Коми туялысьяс]]
+[[Категория:Туялысьяс]]
 [[Категория:Коми литература туялысьяс]]
 
 [[koi:Ельцова Елена Власовна]]
