*Empty MediaWiki Message*

--- a/Кулӧмдін.mw
+++ b/Кулӧмдін.mw
@@ -80,45 +80,45 @@
 ===XVII нэм===
 * Важöнсö Эжва йылын олiсны [[хант]] да [[вӧгул|манси]] войтыр. Насянь колины ю нимъяс. Вочасöн тайö войтырыс овмöдчисны [[Урал]] сайö, кöнi и олöны век на. Но 17 нэмöдз йöгра да вöгулъяс вöлi усьласьöны Эжва йывса коми сиктъяс вылö. Та вöсна татчö овмöдчалiсны гежöда. 17 нэмым Урал сайса муяс веськалiсны роч саръяслöн веськöдлöм улö, йöграяс дугдiсны уськöдчавны, и Эжва йылын кутiсны локны выль коми кресьтяна.
 
-* Öнiя Кулöмдiн районлöн му вылын оланiнъяс артмисны 17 нэмлöн мöд джынас. Медводдзаысь на йылысь пасйöма [[1646]] вося Яренск уездса [[1646 вося Йöзöс гижалан небӧг]]ын. Ставнас вöлi лыддьöдлöма 6 оланiн, шöриннас вöлöма «погостец Усть-Кулом на реке на Вычегде и на усть речки Куломки».
+* Öнiя Кулöмдiн районлöн му вылын оланiнъяс артмисны 17 нэмлöн мöд джынас. Медводдзаысь на йылысь пасйöма [[1646 во|1646]] вося Яренск уездса [[1646 вося Йöзöс гижалан небӧг]]ын. Ставнас вöлi лыддьöдлöма 6 оланiн, шöриннас вöлöма «погостец Усть-Кулом на реке на Вычегде и на усть речки Куломки».
 
-* Кулöмдiн чужис [[1638]] воын. Во мысти, [[1639]] воын, Висер вöлöсьтса кресьтянаяс вöлi элясьöмаöсь сарлы: «на крестьян на Овдейка Лодыгина да на Васку Мишарина с товарищи. Жили-де те крестьяне с ними вместеи во прошлом во 146 (1638) году, не хотя с нами жить, вышли оброчную землю на Усть-Кулом и на Усть-Нем, а от них верст с пятсот и дворы поставили, а старые дворы и угодья в Вишерской волостке покинули и податей с ними платить не хотят». «Васька Фёдоров сын Мишарин з детьми» пасйöма [[1646]] вося Йöзöс гижалан небöгын Кулöмдiнса олысьяс лыдын. Сэнi гижöма, мый сiйö локтöма «Большелуг» (öнi – [[Ыджыдвидз]]) грездысь [[1643]] воын. Буракö, тайö воас ыджыдвидзсаяс лэдзисны сылы вуджны выль оланiнас. Кулöмдiнö Ыджыдвиддзысь вуджöма овны и «Терешка Фёдоров сын Мишарин с сыном». 
+* Кулöмдiн чужис [[1638 во|1638]] воын. Во мысти, [[1639 во|1639]] воын, Висер вöлöсьтса кресьтянаяс вöлi элясьöмаöсь сарлы: «на крестьян на Овдейка Лодыгина да на Васку Мишарина с товарищи. Жили-де те крестьяне с ними вместеи во прошлом во 146 (1638) году, не хотя с нами жить, вышли оброчную землю на Усть-Кулом и на Усть-Нем, а от них верст с пятсот и дворы поставили, а старые дворы и угодья в Вишерской волостке покинули и податей с ними платить не хотят». «Васька Фёдоров сын Мишарин з детьми» пасйöма [[1646 во|1646]] вося Йöзöс гижалан небöгын Кулöмдiнса олысьяс лыдын. Сэнi гижöма, мый сiйö локтöма «Большелуг» (öнi – [[Ыджыдвидз]]) грездысь [[1643 во|1643]] воын. Буракö, тайö воас ыджыдвидзсаяс лэдзисны сылы вуджны выль оланiнас. Кулöмдiнö Ыджыдвиддзысь вуджöма овны и «Терешка Фёдоров сын Мишарин с сыном». 
 
-Сыктыв вожса кресьтянаяс Леонтий Игнатьевич Ватаманов да Евсевий Нифонтовлы лэдзисны овмöдчыны Кулöмдiнö [[1640]] воын. [[1646]] воын Л.И Ватаманов кык пияныскöд вöлi олö танi, а Е.Нифонтов абу вöлi пасйöма олысьяс лыдас, гашкö, абу и вуджöма выльлаас. 
+Сыктыв вожса кресьтянаяс Леонтий Игнатьевич Ватаманов да Евсевий Нифонтовлы лэдзисны овмöдчыны Кулöмдiнö [[1640 во|1640]] воын. [[1646 во|1646]] воын Л.И Ватаманов кык пияныскöд вöлi олö танi, а Е.Нифонтов абу вöлi пасйöма олысьяс лыдас, гашкö, абу и вуджöма выльлаас. 
 
-* [[1646]] – Кулöмдiнын вöлöма «Никола Чудотворец» нима пу [[вичко]], 1 овмöс, кöнi олöма синтöм [[поп]] внукъясыскöд, да 12 кресьтяна овмöс. Медводдза олысьяс лыдас вöлiны ёнджыкасö [[висерсаяс]]. Кулöмдiнсаяс лыдын, буракö, вöлöма и [[роч морт]]. Роч войвылысь, гашкö, воöма «Левка Максимов сын [[Русинов]]» – та вылö индö сылöн овыс. [[Мишарин]], [[Ватаманов]] да [[Русинов]] овъяс кындзи мукöд овсö 1646 вося небöгын абу пасйöма. 
+* [[1646 во|1646]] – Кулöмдiнын вöлöма «Никола Чудотворец» нима пу [[вичко]], 1 овмöс, кöнi олöма синтöм [[поп]] внукъясыскöд, да 12 кресьтяна овмöс. Медводдза олысьяс лыдас вöлiны ёнджыкасö [[висерсаяс]]. Кулöмдiнсаяс лыдын, буракö, вöлöма и [[роч морт]]. Роч войвылысь, гашкö, воöма «Левка Максимов сын [[Русинов]]» – та вылö индö сылöн овыс. [[Мишарин]], [[Ватаманов]] да [[Русинов]] овъяс кындзи мукöд овсö 1646 вося небöгын абу пасйöма. 
 Няньтöм воö некымын кулöмдiнса семья пышйöма [[Сибыр]]ö. Сэтчö мунöмаöсь Л.М. Русиновлöн Зиновий да Елисей пияныс, Т.Ф. Мишаринлöн – Матвей пиыс гöтырыскöд, да мукöд.
 
 * 17 нэмлöн мöд джынйö Кулöмдiн гöгöр олысьяслöн лыдыс содöма. Та вöсна вöлi лöсьöдöма торъя [[вӧлӧсьт]], шöриныс – Усть-Кулом погостын. 
 [[1678 вося Йöзöс гижалан небӧг]]ын гижöма, мый вичко дорын эм [[поп]], [[дяк]], [[пöнöмар]] да [[просвирня]] керкаяс. Ставнас лоöма 22 кресьтяна овмöс. Лоöма выль овъяс – [[Минин]], [[Липин]], [[Бакланов]]; [[Ватаманов]] ов гижöма кыдзи Атаманов. 
 
-* 1646 – 1678 воясö Кулöмдiн вöлöсьтö вöлi пырöны [[Дереваннӧй (Кулӧмдін район)|Дереваннӧй]], [[Руч (Кулӧмдін район)|Руч]], [[Аныб (Кулӧмдін район)| Аныб]], [[Улляна манастыр]].
+* [[1646 во|1646]]–[[1678 во|1678]] воясö Кулöмдiн вöлöсьтö вöлi пырöны [[Дереваннӧй (Кулӧмдін район)|Дереваннӧй]], [[Руч (Кулӧмдін район)|Руч]], [[Аныб (Кулӧмдін район)| Аныб]], [[Улляна манастыр]].
 
 ===XVIII нэм===
-* [[1707]] воын Кулöмдiнса овъяс дорö содтысисны мукöд ов: Кевроль уездысь – [[Седрочев]], Ваг уездысь – [[Вагин]]; [[Зеленеч (Сыктывдін район)|Зеленечысь]] – [[Глызин]]; [[Нехорошев]], [[Исаков]], [[Тарабукин]], [[Кочанов]], [[Кипрушев]], [[Нестеров]], [[Попвасев]], [[Ногиев]], [[Напалков]], [[Авдеев]], [[Панков]], [[Фёдоров]], Чекилев ([[Чукилев]]?).
+* [[1707 во|1707]] воын Кулöмдiнса овъяс дорö содтысисны мукöд ов: Кевроль уездысь – [[Седрочев]], Ваг уездысь – [[Вагин]]; [[Зеленеч (Сыктывдін район)|Зеленечысь]] – [[Глызин]]; [[Нехорошев]], [[Исаков]], [[Тарабукин]], [[Кочанов]], [[Кипрушев]], [[Нестеров]], [[Попвасев]], [[Ногиев]], [[Напалков]], [[Авдеев]], [[Панков]], [[Фёдоров]], Чекилев ([[Чукилев]]?).
 Мукöд воас Кулöмдiнö водзö на локталiсны йöз. 
 
-* [[1784]] воын Кулöмдiн сиктын вöлöма 114 овмöс, 676 морт.
+* [[1784 во|1784]] воын Кулöмдiн сиктын вöлöма 114 овмöс, 676 морт.
 
-* [[1799]]–[[1820]] воясö кыпöдöма кирпичысь [[Петыр-Павел вичко (Кулӧмдін)|Петыр-Павел вичко]].
+* [[1799 во|1799]]–[[1820 во|1820]] воясö кыпöдöма кирпичысь [[Петыр-Павел вичко (Кулӧмдін)|Петыр-Павел вичко]].
 
 ===XIX нэм===
-* [[1836]]–[[1841]] воясö Кулöмдiн вöлöсьтса кресьтяна ёна элясисны асланыс дзескöдысьяс вылас, кодъяс гусясьöны, чукöртöны насянь содтöд вот, но власьтъяс чöв олiсны. Йöзыс кутiсны шызьыны, пансис [[Кулӧмдінса бунт]].
-* [[1841]], [[рака тöлысь]] – Кулöмдiнса кресьтяна чукöртчöм вылас эз кöсйыны мынтыны вотъяссö. Уездса да губернияса веськöдлысьяс эз вермыны дугöдны шызьöмсö. Медым пöдтыны кресьтяналысь юрлэптöмсö, Кулöмдiнö вöлi ыстöма 200 морта карательнöй отряд, кодöн веськöдлiс [[губернатор]] Волхонский. Шызьöмсö вöлi пöдтöма, ныршикъяссö мыждöма – унаöс нöйтöма да ыстöма Сибырö.
-* [[1843]] воын Кулöмдiнö волöма зарни перйысь [[Латкин Василий Николаевич|Василий Латкин]], аслас дневникас пасйöма, мый сиктыс ыджыд, нюжалöма 4 верст вылö.
-* [[1844 ]]– восьтöма приходса училище.
-* [[1859]] – Кулöмдiнын 169 овмöс, 825 морт.
-* [[1870]] – восьтöма земскöй училище, велöдысьнас вöлöма Павла Африкановна Воронцова.
-* [[1876]] – 190 овмöсын олöма 1216 морт.
-* [[1878]] – сиктын восьтöма «приёмнöй покой»
-* [[1878]], [[15 моз|моз тӧлысь 15 лун]] – татчö медводдзаысь воöма Булычевлöн паракод, Булычевлöн вöлöма [[Совдор]]ын сов завод да 3 паракод.
-* [[1885]] – Кулöмдiнын помалöма кыпöдны кирпичысь [[Троича нима вичко (Кулӧмдін)|Троича нима вичко]].
-* [[1887]] – сиктас ыдждалöма брюшнöй тиф.
-* [[1890]] – Кулöмдiнын «приёмнöй покой»  пыдди восьтiсны 10 вольпась вылö бурдöдчанiн, висьысьяссö кутiсны бурдöдны и луннас.
-* [[1891]] – сиктас вöлöма 5 вузасянiн.
-* [[1892]] – Петыр-Павел погостын олöма 1550 морт.
-* [[1899]] – воссьöма [[небӧг видзанін|библиотека]].
-* [[1899]], [[15 сора|сора тӧлысь 15 лун]] – Усть-Сысольск уезд юкöн бöрын артмöдöма 5 земскöй участок, на лыдын – Кулöмдiнса, шöриныс – Кулöмдiн сикт.
+* [[1836 во|1836]]–[[1841 во|1841]] воясö Кулöмдiн вöлöсьтса кресьтяна ёна элясисны асланыс дзескöдысьяс вылас, кодъяс гусясьöны, чукöртöны насянь содтöд вот, но власьтъяс чöв олiсны. Йöзыс кутiсны шызьыны, пансис [[Кулӧмдінса бунт]].
+* [[1841 во|1841]], [[рака тöлысь]] – Кулöмдiнса кресьтяна чукöртчöм вылас эз кöсйыны мынтыны вотъяссö. Уездса да губернияса веськöдлысьяс эз вермыны дугöдны шызьöмсö. Медым пöдтыны кресьтяналысь юрлэптöмсö, Кулöмдiнö вöлi ыстöма 200 морта карательнöй отряд, кодöн веськöдлiс [[губернатор]] Волхонский. Шызьöмсö вöлi пöдтöма, ныршикъяссö мыждöма – унаöс нöйтöма да ыстöма Сибырö.
+* [[1843 во|1843]] воын Кулöмдiнö волöма зарни перйысь [[Латкин Василий Николаевич|Василий Латкин]], аслас дневникас пасйöма, мый сиктыс ыджыд, нюжалöма 4 верст вылö.
+* [[1844 во|1844]]– восьтöма приходса училище.
+* [[1859 во|1859]] – Кулöмдiнын 169 овмöс, 825 морт.
+* [[1870 во|1870]] – восьтöма земскöй училище, велöдысьнас вöлöма Павла Африкановна Воронцова.
+* [[1876 во|1876]] – 190 овмöсын олöма 1216 морт.
+* [[1878 во|1878]] – сиктын восьтöма «приёмнöй покой»
+* [[1878 во|1878]], [[15 моз|моз тӧлысь 15 лун]] – татчö медводдзаысь воöма Булычевлöн паракод, Булычевлöн вöлöма [[Совдор]]ын сов завод да 3 паракод.
+* [[1885 во|1885]] – Кулöмдiнын помалöма кыпöдны кирпичысь [[Троича нима вичко (Кулӧмдін)|Троича нима вичко]].
+* [[1887 во|1887]] – сиктас ыдждалöма брюшнöй тиф.
+* [[1890 во|1890]] – Кулöмдiнын «приёмнöй покой»  пыдди восьтiсны 10 вольпась вылö бурдöдчанiн, висьысьяссö кутiсны бурдöдны и луннас.
+* [[1891 во|1891]] – сиктас вöлöма 5 вузасянiн.
+* [[1892 во|1892]] – Петыр-Павел погостын олöма 1550 морт.
+* [[1899 во|1899]] – воссьöма [[небӧг видзанін|библиотека]].
+* [[1899 во|1899]], [[15 сора|сора тӧлысь 15 лун]] – Усть-Сысольск уезд юкöн бöрын артмöдöма 5 земскöй участок, на лыдын – Кулöмдiнса, шöриныс – Кулöмдiн сикт.
 * 19 нэм помын Кулöмдiн лоис ыджыд сиктöн, веськöдлан шöринöн. Сэнi вöлi вöлöсьтса веськöдланiн, станöвöй жыр, земскöй пошта станция, велöдчанiн, куим вичко.
 * Быд во Кулöмдiнын [[6 ӧшым|öшым тӧлысь 6 лунсянь]] [[1 тӧв шӧр|тöвшöр тӧлысь 1 лунöдз]] вöлi нуöдöны [[ярманга]].
 
@@ -197,9 +197,9 @@
 |}
 
 == Кулöмдiн сиктын медводдза овъяс ==
-* [[1646]] – [[Мишарин]], [[Ватаманов]], [[Русинов]]
-* [[1678]] – [[Минин]], [[Липин]], [[Бакланов]], [[Ватаманов]]
-* [[1607]] – [[Авдеев]], [[Вагин]], [[Глызин]], [[Исаков]], [[Кочанов]], [[Кипрушев]], [[Напалков]], [[Нестеров]], [[Нехорошев]], [[Ногиев]], [[Панков]], [[Попвасев]], [[Седрочев]], [[Тарабукин]], [[Фёдоров]], [[Чукилев]]
+* [[1646 во|1646]] – [[Мишарин]], [[Ватаманов]], [[Русинов]]
+* [[1678 во|1678]] – [[Минин]], [[Липин]], [[Бакланов]], [[Ватаманов]]
+* [[1707 во|1707]] – [[Авдеев]], [[Вагин]], [[Глызин]], [[Исаков]], [[Кочанов]], [[Кипрушев]], [[Напалков]], [[Нестеров]], [[Нехорошев]], [[Ногиев]], [[Панков]], [[Попвасев]], [[Седрочев]], [[Тарабукин]], [[Фёдоров]], [[Чукилев]]
 * [[Рассыхаев]]
  
 == Культура ==
@@ -208,20 +208,20 @@
 
 == Тöдчана йöз ==
 ===Кулöмдiн сиктын чужлiсны===
-
 * [[Рассыхаев Иван Степанович]] ([[1878]]–[[1968]]) – [[коми гижысь]]
 * [[Рассыхаев Иван Егорович]] ([[1906]]–[[19??]]) – [[Коми АССР]]са просвещение министр ([[1947]]-[[1951]])
 * [[Рассыхаев Василий Николаевич]] ([[1922]]–[[1990]]) – [[коми ворсысь]], Коми АССР-са народнöй артист ([[1971]])
 * [[Макся Ёгор]] – Кулöмдiнса олысь, йöзкостса серамбана висьтъясса герой, кодi пöръявлö йöзсö.
-* [[Безносиков Алексей Семенович]] ([[1947]]) – общественнöй удж вöчысь
+* [[Безносиков Алексей Семёнович]] ([[1947]]) – общественнöй удж вöчысь
 * [[Напалков Виктор Михайлович]] ([[1963]]) – общественнöй удж вöчысь
+* [[Кочанов Гелий Сергеевич]] ([[1934]]) – [[коми шылад тэчысьяс|коми шылад тэчысь]]
 * [[Липин Михаил]] – пауэрлифтингысь Россияын спортса мастер
-* [[Ельцова Алёна Власовна]] ([[1979]]) – [[коми гижысь]]
+* [[Ельцова Елена Власовна]] ([[1979]]) – [[коми гижысь]]
 
 ===Кулöмдiн сиктын овлiсны===
-* [[Гущин Василий Яковлевич]] – [[коми шылад тэчысь]]
+* [[Гущин Василий Яковлевич]] – [[коми шылад тэчысьяс|коми шылад тэчысь]]
 * [[Лодыгин Василий Григорьевич]] ([[1949]]) – [[коми гижысь]]
-* [[Чисталёв Тима Вень]] ([[1890–1939]]) – [[коми гижысь]]
+* [[Чисталёв Тима Вень]] ([[1890 во|1890]]–[[1939]]) – [[коми гижысь]]
 
 == Тöдчана эмторъяс ==
 * [[Кулӧмдінса бунт]]
@@ -231,7 +231,7 @@
 * [[Айму вӧсна Ыджыд тышын усьӧмаяслы паметник (Кулӧмдін)|Айму вӧсна Ыджыд тышын усьӧмаяслы паметник]]
 * [[В.И. Ленинлы паметник (Кулӧмдін)|В.И. Ленинлы паметник]]
 * [[Воин-мездысьлы паметник (Кулӧмдін)|Воин-мездысьлы паметник]]
-* [["Василей" гаж]]
+* асшöр шылад тэчысьяслöн [[Василей (гаж)|Василей]] гаж-конкурс
 * Катыдпомса вит тополь (вит мыр)
 
 == Öшмöсъяс ==
