*Empty MediaWiki Message*

--- a/Кулӧмдін.mw
+++ b/Кулӧмдін.mw
@@ -208,18 +208,18 @@
 
 == Тöдчана йöз ==
 ===Кулöмдiн сиктын чужлiсны===
-* [[Рассыхаев Иван Степанович]] ([[1878]]–[[1968]]) – [[коми гижысь]]
-* [[Рассыхаев Иван Егорович]] ([[1906]]–[[19??]]) – [[Коми АССР]]са просвещение министр ([[1947]]-[[1951]])
+* [[Рассыхаев Иван Степанович]] ([[1878 во|1878]]–[[1968]]) – [[коми гижысь]]
+* [[Рассыхаев Иван Егорович]] ([[1906]]–??) – [[Коми АССР]]са просвещение министр ([[1947]]-[[1951]])
 * [[Рассыхаев Василий Николаевич]] ([[1922]]–[[1990]]) – [[коми ворсысь]], Коми АССР-са народнöй артист ([[1971]])
 * [[Макся Ёгор]] – Кулöмдiнса олысь, йöзкостса серамбана висьтъясса герой, кодi пöръявлö йöзсö.
 * [[Безносиков Алексей Семёнович]] ([[1947]]) – общественнöй удж вöчысь
 * [[Напалков Виктор Михайлович]] ([[1963]]) – общественнöй удж вöчысь
-* [[Кочанов Гелий Сергеевич]] ([[1934]]) – [[коми шылад тэчысьяс|коми шылад тэчысь]]
+* [[Кочанов Гелий Сергеевич]] ([[1934]]) – [[Комиын шылад тэчысьяс|коми шылад тэчысь]]
 * [[Липин Михаил]] – пауэрлифтингысь Россияын спортса мастер
 * [[Ельцова Елена Власовна]] ([[1979]]) – [[коми гижысь]]
 
 ===Кулöмдiн сиктын овлiсны===
-* [[Гущин Василий Яковлевич]] – [[коми шылад тэчысьяс|коми шылад тэчысь]]
+* [[Гущин Василий Яковлевич]] – [[Комиын шылад тэчысьяс|коми шылад тэчысь]]
 * [[Лодыгин Василий Григорьевич]] ([[1949]]) – [[коми гижысь]]
 * [[Чисталёв Тима Вень]] ([[1890 во|1890]]–[[1939]]) – [[коми гижысь]]
 
