The file [[:Image:Coat_of_Jordan.png]] has been removed, as it has been deleted by [[:commons:User:A.Savin]]: ''Per [[commons:Commons:Deletion requests/File:Coat of Jordan.png]]''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Иордания.mw
+++ b/Иордания.mw
@@ -2,7 +2,7 @@
 |Коми ним=Иордания хашимит корольув
 |Оригинал ним=المملكة الأردنية الهاشمي<br />(аль-Мамля́ка аль-Урдуни́я аль-Хашими́я)
 |Дӧрапас=Flag of Jordan.svg
-|Канпас=Coat_of_Jordan.png
+|Канпас=
 <!-- |Вместо герба= -->
 |Девиз=الله، الوطن، الملك (Ен, Родина, Король)
 |Кып ним=السلام الملكي الأردني (Ас-салам аль-малаки аль-урдуни)
