*Empty MediaWiki Message*

--- a/Комиын_Слава_ордена_тыр_кавалеръяс.mw
+++ b/Комиын_Слава_ордена_тыр_кавалеръяс.mw
@@ -54,15 +54,15 @@
 |[[1944]]
 |?
 |-
-|[[Павлов А.И.]]
-|
-|
-|
-|
-|
-|
-|
-|
+|[[Павлов Александр Иванович]]
+|[[1914]]–[[1982]]
+|[[Вӧлӧгда обласьт]]
+|[[1944]]
+|?
+|[[1945]]
+|23687
+|[[1946]]
+|911
 |-
 |[[Соров Иван Васильевич]]
 |[[1925]]–[[1945]]
