*Empty MediaWiki Message*

--- a/Эфиопия.mw
+++ b/Эфиопия.mw
@@ -9,7 +9,7 @@
 <!-- |Аудио= -->
 |Веськӧдлан ног=[[Республика]]
 |Каналан эскӧм=
-|Мусерпас=LocationEthiopia.svg
+|Мусерпас=Ethiopia in its region.svg
 |Кыв=[[Амхара кыв|амхара]]
 |Дата независимости/Канму панӧм=
 <!-- |Независимость от= -->
