*Empty MediaWiki Message*

--- a/Рассыхаев_Иван_Егорович.mw
+++ b/Рассыхаев_Иван_Егорович.mw
@@ -2,22 +2,34 @@
 
 ==Олан туй== 
 * [[1906]], [[6 кос му|косму тöлысь 6 лун]] – чужис [[Кулӧмдiн]] [[сикт]]ын.
-* [[1916]] – помалiс Кулöмдiнса земскöй училище.
-* [[1929]] – [[1932]] – студенталiс [[Петыркар|Ленинградын]] [[А.И. Герцен нима педагогика институт|А.И. Герцен нима пединститутын]].
-* [[1932]], [[сора тöлысь]]–[[1934]], [[йирым тöлысь]] – [[Уллянаса видз-му овмöс]]ын директор.
-* [[1941]], [[сора тöлысь]] – [[1943]] – вöлi [[Айму вöсна Ыджыд Тыш]] вылын, служитiс Медшöр веськöдлöмлöн резервын, 385 гаубица артиллерия полкын.
+* [[1912]]–[[1916]] – велöдчис Кулöмдiнса земскöй училищеын.
+* Уджаліс [[Мыс (Кулӧмдін район)|Мыс]] [[сикт]]ын изба-читальняын веськöдлысьöн.
+* [[1920]]–[[1922]] – велöдчис Совпартшколаын.
+* куим во веськöдліс Кулöмдін вöлöсьтса исполкомöн.
+* [[1926]]–[[1927]] – вöлі Гöрд Армияын.
+* [[1929]]–[[1932]] – студенталiс [[Петыркар|Ленинградын]] [[А.И. Герцен нима педагогика институт|А.И. Герцен нима пединститутын]].
+* [[1932]], [[сора тöлысь]]–[[1934]], [[йирым тöлысь]] – [[Уллянаса видз-му техникум]]ын директор.
+* кык во уджаліс Войвыв крайкомитетын кадръяс серти инструкторöн, куим во велöдіс Сыктывкарса 2-öд номера школаын.
+* [[1941]], [[сора тöлысь]] – [[1943]] – вöлi [[Айму вӧсна Ыджыд тыш]] вылын, служитiс Медшöр веськöдлöмлöн резервын, 385 гаубица артиллерия полкын. Тышкасис Калинин, Балтикабердса, Рытыв-Войвыв да 3-öд Украинаса фронтъяс вылын. Вöлі армияса политотделын политуджалысьöн да лекторöн. Кыкысь ранитчыліс да контужитчыліс.
 * [[1945]] – уджалiс ВКП (б) Коми обкомын, пропаганда да агитатия юкöнын веськöдлысьöс вежысьöн.
-* [[1946]], [[22 ӧшым|öшым 22 лун]] – ВКП (б) Коми обком индiс сiйöс Коми АССР-са просвещение министрöн.
-* [[1947]], [[29 рака|рака тöлысь 29 лун]] – [[1951]], [[6 кос му|косму 6 лун]] – уджалiс Коми АССР-са просвещение министрöн.
-* [[1951]], [[3 йирым|йирым 3 лун]] – веськöдлiс [[Сыктывкар]]са школаса училищеöн.
+* [[1946]], [[22 ӧшым|öшым тöлысь 22 лун]] – ВКП (б) Коми обком индiс сiйöс Коми АССР-са просвещение министрöн.
+* [[1947]], [[29 рака|рака тöлысь 29 лун]] – [[1951]], [[6 кос му|косму тöлысь 6 лун]] – уджалiс Коми АССР-са просвещение министрöн.
+* [[1951]], [[3 йирым|йирым тöлысь 3 лун]] – [[1959]] – веськöдлiс [[Сыктывкарса педагогика училище]]öн.
+* [[1959]] – сэні жö пенсия вылö петтöдз уджаліс история велöдысьöн.
+* [[1974]] – куліс [[Сыктывкар]]ын.
+
+== Мукöд удж ==
+И.Е. Рассыхаевöс бöрйылісны Коми АССР-са Верховнöй Сöветö депутатöн, КПСС-са Коми обкомö пырысьöн.
 
 ==Наградаяс==
-Кыдзи Айму вöсна Ыджыд Тыш вылö ветлысь:
-* [[Гöрд кодзув]] да [[II тшупöда Айму Тыш]] [[орден]]ъяс;
-* [[Збойлунысь]] да [[Германия весьтын Вермöмысь]] [[медаль]]яс.
-* [[Просвещениеса отличник]] морöс пас,
+Кыдзи Айму вöсна Ыджыд тыш вылö ветлысь:
+* Кык [[Гӧрд кодзув (орден)|Гӧрд кодзув]] да II тшупӧда [[Айму тыш орден|Айму тыш]] орденъяс;
+* [[Збойлунысь (медаль)|Збойлунысь]] да [[1941-1945 воясӧ Айму вӧсна Ыджыд тышын Германия весьтын Вермӧмысь (медаль)|1941-1945 воясӧ Айму вӧсна Ыджыд тышын Германия весьтын Вермӧмысь]] медальяс.
+* [[Просвещениеса отличник]] морöс пас.
 
 ==Öшмöсъяс== 
+* [[Игнатов Михаил Константинович|''Игнатов М.К.'']] Усть-Куломский район: помни прошлое, зная настоящее, делай будущее (1620–2008). – [[Сыктывкар]], [[2009]]. – С. 313.
 * ''Габов П.В.'' Народное образование в лицах (Коми АССР, XX век) // Известия [[Коми му туялан котыр|Общества изучения Коми края]]: научно-популярный краеведческий журнал. – [[Сыктывкар]], [[2010 во|2010]]. – Вып. 13. – С. 33-42.
 
 [[Категория:Персоналия:Коми]]
+[[Категория:Кулӧмдiн]]
