*Empty MediaWiki Message*

--- a/1819-ӧд_во.mw
+++ b/1819-ӧд_во.mw
@@ -1,5 +1,5 @@
 {{Вояс|1819}}
-'''1819 во''' – [[Григорий календар]] серти [[кассяна во]], пансьӧ [[пекнича]]сянь.
+'''1819 во''' – [[Григорий календар]] серти абу [[кассяна во]], пансьӧ [[пекнича]]сянь.
 
 == Лоӧмторъяс ==
 == Чужисны ==
