*Empty MediaWiki Message*

--- a/Рассыхаев_Иван_Степанович.mw
+++ b/Рассыхаев_Иван_Степанович.mw
@@ -1,14 +1,14 @@
 [[Файл:Рассыхаев_И.С.jpg|250 px|right|thumb|Рассыхаев Иван Степанович (1878–1968) – коми гижысь]]
 
-'''Рассыхаев Иван Степанович''' (комиӧн – ''Сьтэпан Иван'') ([[1878]]–[[1968]]) – асшӧра босьтчысь [[коми гижысь]].
+'''Рассыхаев Иван Степанович''' (комиӧн – ''Сьтэпан Иван'') ([[1878 во|1878]]–[[1968]]) – асшӧра босьтчысь [[коми гижысь]].
 
 ==Олан туй==
-* [[1878]], [[16 вӧльгым|вӧльгым тӧлысь 16 лун]] – чужис [[Кулӧмдiн]] сиктын крестьяна семьяын, помаліс 4 класса училище.
+* [[1878 во|1878]], [[16 вӧльгым|вӧльгым тӧлысь 16 лун]] – чужис [[Кулӧмдiн]] сиктын крестьяна семьяын, помаліс 4 класса училище.
 * [[1968]], [[16 тӧв шӧр|тӧвшӧр тӧлысь 16 лун]] – кувсис [[Кулӧмдiн]] сиктын. 
 
 ==Гижан удж==
 
-'''Степан Иван Рассыхаев''' тöдса кыдзи морт, кодi нуöдiс ассьыс дневник да пуктiс пай коми гижан культура сöвмöдöмö. Сылöн медшöр гижöдыс шусьö '''Дневные записки''', сiйöс видзöны [[Коми Республикаса Национальнöй музей]]ын. Дневникас сiйö пасъялiс ас да сиктса  олöмысь вежсьöмъяс, содталiс сэтчö серпасъяс. 
+'''Степан Иван Рассыхаев''' тöдса кыдзи морт, кодi нуöдiс ассьыс дневник да пуктiс пай коми гижан культура сöвмöдöмö. Сылöн медшöр гижöдыс шусьö '''Дневные записки''', сiйöс видзöны [[Коми Республикаса Национальнӧй музей]]ын. Дневникас сiйö пасъялiс ас да сиктса  олöмысь вежсьöмъяс, содталiс сэтчö серпасъяс. 
 
 Сы кындзи, Иван Рассыхаев комиöдiс ен гижöдъяс, видзис ки помысь лöсьöдӧм да важöн печатайтöм небöгъяс.
 
@@ -33,6 +33,9 @@
 * Менам олöм // [[Войвыв кодзув (журнал)|Войвыв кодзув]], [[1994]]. – 9 №; [[Коми му (газет)|Коми му]], [[1994]]. – 19, 24, 28 №.
 * Моя жизнь // [[Молодёжь Севера (газет)|Молодёжь Севера]], [[1991]]. – 12 января; [[Вера-Эскӧм (газет)|Вера-Эскӧм]], [[1993]]. – № 99.
 * «Дневные записки» усть-куломского крестьянина И.С. Рассыхаева (1902-1953). – [[Москва]], [[1997]].
+
+==Видзöдöй сідзжö==
+[[2012 во]]ын "Юргын" телеканал лöсьöдіс И.С. Рассыхаев йылысь торъя передача "Лица истории" уджтасын:  http://www.krtk.ru/video/heading/13/1531/
 
 ==Ӧшмӧсъяс==
 * [[Мартынов Валерий Иванович|Мартынов В.И.]] Жанрлöн куслытöм олöм // [[Войвыв кодзув (журнал)|Войвыв кодзув]], [[1993]]. – 11 №.
