--- a/Лимерова_Валентина_Александровна.mw
+++ b/Лимерова_Валентина_Александровна.mw
@@ -50,7 +50,7 @@
 * [[Тима Вень|Чисталёв В. Т.]] Ния. – [[Сыктывкар]]: [[Кола (небöг лэдзанiн)|ООО «Изд-во «Кола»]], [[2010]]. 
 
 == Ошканпасъяс ==
-* Культура юкöнын Коми Республика Правительстволӧн премиа босьтысь ([[2011 во]]). 
+* Культура юкöнын Коми Республика Правительстволӧн премия босьтысь ([[2011 во]]). 
 * Коми Республика велӧдан да вылысь школа министерстволöн Почёт грамота.
 * Коми Республикаса культура да национальнӧй политика министерстволöн Почёт грамота.
 
