*Empty MediaWiki Message*

--- a/Петыр-Павел_вичко_(Кулӧмдін).mw
+++ b/Петыр-Павел_вичко_(Кулӧмдін).mw
@@ -1,8 +1,39 @@
 [[Файл:Кулӧмдінса вичко.jpg|250 px|right|thumb|Кулӧмдінса Петыр-Павел вичко ([[2011 во]])]]
-'''Петыр-Павел вичко''' – [[Кулӧмдiн]] [[сикт]]са православнӧй вичко. 
+'''Петыр-Павел вичко''' (кыпӧдӧма [[1799 во]]–[[1810 во]]) – [[Кулӧмдiн]] [[сикт]]са православнӧй вичко. 
 
-== История ==
+== XIX нэм ==
 '''Кулӧмдінын Петыр-Павел вичко''' босьтчисны кирпичысь кыпöдны [[1799 во]]ын, уджъяссö помалісны [[1810 во]]ын. [[1820 во]]ся [[кӧч тӧлысь]]ын вежöдiсны Петыр да Павел апостолъяслöн нимъясöн. 
+
+[[1867 во]]ын тайö вичкоас Литургиясö служитiс [[Вӧлӧгда]]са да [[Югдін]]са епископ Павел. 
+
+[[1883 во]]ын кутшöмкö Василий Фёдорович [[Панюков]] танi примитöма военнöй присяга да мунöма служитны император армияса стрелковöй полкö.
+
+[[1875 во]]ся ведомосьтъясын пасйöма, мый вичкоса эмбур зэв гöль (важиник кöлуй, пу да [[ыргӧн]] тасьтi-пань, медся колана ен [[небӧг]]ъяс).
+
+[[1875 во]]ся [[28 ода кора|ода-кора тӧлысь 28 лунö]] Петыр-Павел вичкоса настоятельöн пуктöма Василий Дмитриевич Садоков (сылы вöлöма 51 арöс). Дöвеч, öтнас быдтöма кык нылöс: 17 арöса Раиса (кужö лыддьысьны), 11 арöса Ольга (сы кадö велöдчöма [[Тотьма]]ын нывбаба прогимназияын).
+
+Настоятельлöн отсасьысьöн вöлöма [[Попов]] Василий Константинович. На кындзи вичкоын зiлисны мукöд кадас: священник о.Палладий, псаломщикъясöн Андрей Тимофеевич Попов да Исидор Алексеевич Попов, дьяконъясöн – Николай Тюрнин, Стефан Тюрнин да Михаил Алексеевич [[Тюрнин]] (сiйö 40 во уджалiс вичкоас).
+
+Притчас (штатса уджалысьяс) вöлöма 3 морт: настоятель да кык псаломщик. Настоятельлöн керкаын: «''малый деревянный и весьма ветхий''». Та вöсна община медалöма кресьтянин керкаысь жыр. Псаломщикъяс олöны ас керкаас.
+
+Куим морта притчлöн удждоныс 164 шайт 64 ур. На пиысь настоятельлы – 105 шайт 84 ур, медводдза псаломщиклы – 35 шайт 28 ур, мöдыслы – 23 шайт 52 ур.
+
+[[1880 во]]ся Клирöвöй ведомосьтын гижöма, мый Петыр-Павел вичкоын эмбурыс содöма. Вичкоын эм: «''церковных облачений хороших – 5, посуда разная: медная посеребрянная и оловянная, Евангелий – 4, два из них обтянуты малиновым бархатом, наугольники и средник – серебряные 84 пробы, купель для крещения младенцев и венцы для брачующихся медные, книги Богослужебные почти все в двух рядах…''». «''Земли усадебной (огородной) было выделено около 500 сажен, пахотной и сенокосной – около 10 десятин. С пахотной земли снято хлеба 8 четвертей на 35 рублей, заготовлено сена 50 возов на сумму 50 рублей, которое шло на прокорм 4 лошадей, 6 коров, 8 овец''».
+
+[[1880 во]]ын вичкоса кассаö (кружка) воöма 882 шайт 64 ур. Тайö сьöм локтöма требаысь, молебенысь, казьтылöмъясысь, [[Рöштво]] да [[Ыджыд лун]] празьникъяс нуöдöмысь. Неуна сьöм настоятель ним вылö вöлi ыстöма Зeмскöй пошта пыр Усть-Сысольскса духовнöй управлениеысь либö Вöлöгдаса духовнöй консисториысь Епископ нимсянь. Вичкоö сiдзжö волöны матысса [[грезд]]ъясысь эскысьяс.
+
+[[1879 во]]ся [[6 кӧч|кӧч тӧлысь 6 лунсянь]] Петыр-Павел вичкоын настоятельöн индöма Николай Михайлович Доброумов. [[1879 во]]ся [[4 ӧшым|ӧшым тӧлысь 4 лунö]] сiйöс пуктiсны Кулöмдiн сиктса подув училищеö Законоучительöн. Сiйö вöлi уна велöдчöм мортöн, [[Яренск]]са Преображенньö собoрса заштатнöй священник Филофейлöн пиöн. Сы кындзи, Н.М. Доброумов вöлi 5-öд кытшса благочиннöйöн.
+
+[[1886 во]]ын Петыр-Павел вичко выльысь вежöдöма сотчöм бöрас. Вичко посводзас (папертьын) вöлöма Нерукотворнöй Спаслöн öбраз, кодöс ас кадö [[Ен]] отсöгöн вермöмаöсь видзны биысь – Николай Чудотвореч вичко сотчигöн шыбитöмаöсь [[Эжва]]ö.
+
+[[1890 во]]ын вöчöма кöлöкöльня,  жыннянлöн сьöктаыс вöлöма 204 пуд.
+
+== 1900-öд вояс ==
+[[1903]] вося [[рака тöлысь]]сянь – [[1906]] вося [[öшым тöлысь]]öдз Петыр-Павел апостолъяслöн вичкоын попалöма иерей Николай Николаевич Доброумов. Кулöмдiнö сiйöс вуджöдöмаöсь [[Помӧсдін (Кулӧмдін район)|Помöсдiнса]] [[Енмамлӧн Успенньӧ вичко (Помӧсдін)|Енмамлöн Успенньö вичкоысь]]. [[Усть-Сысольск]]а  духовнöй училище да [[Вӧлӧгда]]са семинария помалöм бöрын [[Югдін]]са еписком Гавриил [[1899 во]]ын бласлöвитiс сiйöс служитны Помöсдiнса вичкоын. А [[1906]] воын Кулöмдiнысь Николай Доброумовöс вуджöдiсны [[Аныб (Кулӧмдін район)|Аныбö]]. [[2001 во]]ся [[6 йирым|йирым тöлысь 6 лунö]] Вежа Синод шуис иерей Николай Николаевич Доброумовöс вежаöн да пыртiс Коми му югдöдысь новомученникъяс лыдö.
+
+[[1930]]-öд воясö Петыр-Павел вичколысь пытшкöссö вöлi мавтöма кельыдлöз рöмöн да мичмöдöма [[зарни]] серъясöн да дзоридзьясöн. Танi югъялöма ыджыд паникадилö. Царскöй вöрöта öтар-мöдарладорас вöлöмаöсь колоннаяс. На бокын öта-мöдыслы паныда сулалöмаöсь сус пуысь вöлалöм 1 метр судтаа, кианыс важ гижöда анделъяс. Вичкосö мичмöдöмаöсь и важся мича öбразъяс, а шуйга кырлöс саяс öшалöма Николай Чудотвореч вежалы важся öбраз да житие, кодöс чайтöмаöсь чудотворнöйöн. [[1898 во]]ын Николай II-öс императорö коронуйтöмкöд йитöдын тайö öбраз дорас ньöбöмаöсь да ладмöдöмаöсь зарниöдöм [[озысь]] веркöс (риза).
+
+Петыр-Павел вичкосянь рытыв-войвывланьын вöлi [[Николай Чудотвореч вичко (Кулӧмдiн)| Николай Чудотвореч вичко]], а сыкöд орччöн – пу кöлöкöльня. Став вичкосö [[1902]] воын кытшалöма кöрт потшöс, кодi нюжалöма матö 170 сажень. Лунвывладорын вöлöма кирпичысь неыджыд стöрöжка. Вежа стрöйбаяс гöгöрын быдмисны [[кыдз]] да [[сус]] пуяс. Петыр-Павел вичко бокын öнiöдз на эм öти кыдз пу, код улö, кыдзи висьталöны важ йöз, дзеблöмаöсь кутшöмкö ыджыд чина мортлысь кагасö. Вичко потшöс сайын, öнiя Берегдор улича вылын, вöлöма шойна.
 
 == 1930-öд вояс ==
 == 1990-ӧд вояс ==
