--- a/Петыр-Павел_вичко_(Кулӧмдін).mw
+++ b/Петыр-Павел_вичко_(Кулӧмдін).mw
@@ -36,12 +36,41 @@
 Петыр-Павел вичкосянь рытыв-войвывланьын вöлi [[Николай Чудотвореч вичко (Кулӧмдiн)| Николай Чудотвореч вичко]], а сыкöд орччöн – пу кöлöкöльня. Став вичкосö [[1902]] воын кытшалöма кöрт потшöс, кодi нюжалöма матö 170 сажень. Лунвывладорын вöлöма кирпичысь неыджыд стöрöжка. Вежа стрöйбаяс гöгöрын быдмисны [[кыдз]] да [[сус]] пуяс. Петыр-Павел вичко бокын öнiöдз на эм öти кыдз пу, код улö, кыдзи висьталöны важ йöз, дзеблöмаöсь кутшöмкö ыджыд чина мортлысь кагасö. Вичко потшöс сайын, öнiя Берегдор улича вылын, вöлöма шойна.
 
 == 1930-öд вояс ==
+[[1933]] воын Коми облисполкомса веськöдлысь [[Ильчуков]]а мöдöдалiс письмöяс, медым вичкояс тупкалiсны став Коми му пасьта. И тайö индöдсö босьтчисны пöртны олöмö.
+[[1937]] вося [[17 йирым|йирым тöлысь 17 лунö]] Н.И. [[Мишарин]]лöн веськöдлöм улын Макар Öльöш да Карö сиктъясса олысьяс, ставыс 111 морт, гöлöсуйтiсны вичко сиптöм вöсна. Сiйö жö лунас «Буденный» колхоз нуöдiс собрание, кöнi П.А. [[Чаланов]] ышöдiс вичко керкаын восьтны клуб. Иван [[Липин]] тöдчöдiс: «Вичкосьыс тöлк абу, сы местаö бурджык восьтны культура керка». К. [[Мишарин]] содтiс: «Вичкояссö быд сиктын кисьтöны, колö бырöдны и миянын».
+
+[[18 йирым|Йирым тöлысь 18 лунö]] «Ленин туйöд» колкозлöн собрание вылын [[Семяшкин]] висьталiс: «Царлöн правительство ассьыс власьтсö ёнмöдiс вичко отсöгöн. Сöвет власьт юкис вичкосö государство бердысь. Кызь во стрöитам социализм, и вичколы тырмас нин гудыртны йöзлысь вежöрсö. Сiйö öнi падмöдö миянлысь олöм». Семяшкин дор сувтiсны мукöд да шуисны: тупкыны Петыр-Павел вичко. Кывкöртöдсö мöдöдiсны райисполкомö, кодi сэсся шыöдчис облисполкомö. 
+
+[[1938]] вося [[21 рака|рака тöлысь 21 лунö]] облисполкомса президиум могмöдiс кулöмдiнсалысь Петыр-Павел вичко сиптöм кузя корöмсö да урчитiс восьтны сэнi кусöдчысьяслысь депо.
+Но Кулöмдiнысь Енлы эскысьяс эз öвсьыны, ветлöдлiсны сикт-грездъястi, чукöртiсны кырымпасъяс, медым вичкосö восьтны бöр. Медся нырччысьöн вöлi [[Чупров]], кодöс власьтбердсаяс шулiсны троцкистöн.
+
+[[1938]] вося [[23 вӧльгым|вöльгым тöлысь 23 лунö]] «Ленин туйöд» колхозын бара котырлiсны чукöртчылöм, кöнi чорыда шуисны: «Мыррддьыны эскысьяслысь Петыр-Павел вичкосö да СССР-са Верховнöй Сöветö бöрйысьöмöдз восьтыны сэнi районса пионеръяслысь керка», корисны панны троцкист Чупровлы да сы коддьöмъяслы паныд уголовнöй делö. Паныд мунысьясöс эз кывзыны, вичко тупкисны, попъясöс йöршитiсны дзескыдiнö. 
+
+Петыр-Павел вичкоысь ыджыд кöлöкöльнясö жугöдiсны (висьталöны, мый сылöн шыыс кылöма [[Улляна (Кулӧмдін район)|Уллянаöдз]]); сы пыдди вöчöма вевт.
+
+Вичко вöлтарын писькöдiсны öдзöсъяс, медым сэтi вермис пырны сьöкыд техника, а вежа жырйын восьтiсны куритчанiн. Тöдтöм йöз чукöртiсны вичкоысь став енсö да нуисны сиктсöветö ломтыны пач. Шуöны, сельсöветын пачсö сэки ломтöны вöлöм гозъя. Найö вежавидзöмаöсь вöчны Ен водзын татшöм ыджыд мыжсö да вуджöмаöсь овны мöд сиктö. 
+
+Дыр кад чöж вичкоын вöлi кусöдчысьяслöн депо, а сэсся гараж да ДОСААФ.
+
 == 1990-ӧд вояс ==
+Петыр-Павел вичко бöр ловзьыны кутiс [[1991]] воын, кор песионерка Агафья Егоровна [[Кипрушев]]а мукöд эскыськöд öтвылысь шуисны выльмöдны Кулöмдiнса вежаинъяс. [[1991]]-öд вося [[урасьӧм тӧлысь]]ӧ лои котыртöма община да пасйöма. Сиктсöветöн веськöдлысь А.А. [[Липин]] сетiс сы борд улö Кулöмдiнын вичкояслысь кольöм стрöйбаяссö: Петыр-Павеллысь öти судтаа, Енкаянлун да Владимирса Енмам öбраз престолъяса кык судтаа гожся храмъяс.
+
+Медводз шуисны дзоньтавны-выльмöдны Петыр-Павел нима тöвся вичкосö. Общинаса старостаöн бöрйисны фронтовик, Япониякöд да Айму вöсна Ыджыд тышъясса ветеран Милослав Николаевич [[Игнатов]]öс. Вичко сöстöммöдöм да выльмöдöм бöрын кутiсны волывлыны [[Сыктывкар]]ысь попъяс, медым нуöдны службаяс, а [[Улляна манастыр]] воссьöм бöрын кежавлiс и Сыктывкарса да Воркутаса епископ Питирим.
+
+[[1992]] воын Петыр-Павеллöн вичкоын ыджыдавны владыка Питирим индiс отеч Ионаöс (Скибинöс). 
+
+[[2003]] вося [[йирым тӧлысь]]сянь отеч Ионалöн кувсьöм бöрын службасö кутiсны нуöдны Уллянаса манакъяс. Манастырöн сэки юрнуöдiс отеч Роман (Овсиенко). 
+
+[[2006]] вося [[10 кӧч|кӧч тӧлысь 10 лунсянь]] еписком Питиримлöн индöд серти Петыр-Павел вичкоын попöн зiльö иерей Александр Антонов (матушкаыс – Ольга). 
+
+[[2011 во]]сянь вичкоын уджалысьяс дасьтöны «Кулöмдiнса вежаинъяс» небöг да чукöртöны 10 миллион сьöм, медым дзоньтавны [[Енкаянлун вичко (Кулӧмдін)|Енкаянлун да Владимирса Енмам öбраз престолъяса]] кык судтаа Кулöмдiнса вичко.
+
 == Ӧтуввез-сайт ==
-* Петыр-Павел вичколӧн сайт – http://ust-kulom-hram.ucoz.ru/
+* Петыр-Павел вичколӧн сайтъяс – http://ust-kulom-hram.ucoz.ru/ да http://ust-kulom-hram.ucoz.ru/
 == Ӧшмӧсъяс ==
 * Нестерова Г. Вичко ловзис // [[Парма гор (газет)|Парма гор]], [[2007]] во. [[22 ода кора|Ода-кора тöлысь 22 лун]]. 
 * Кулöмдiнса вежаинъяс // [[Коми му (газет)|Коми му]], [[2012 во]], [[12 кос му|косму тöлысь 12 лун]].
+* [http://ust-kulom-hram.ucoz.ru/ Петыр-Павел вичколӧн сайт]
 
 [[Категория:Комиын вичкояс]]
 [[Категория:Кулӧмдiн]]
