*Empty MediaWiki Message*

--- a/Комиын_шылад_тэчысьяс.mw
+++ b/Комиын_шылад_тэчысьяс.mw
@@ -62,6 +62,10 @@
 |[[1947]]
 |[[Габов (Кулӧмдін район)|Габов]]
 |-
+|[[Мастеница Вацлав Ииосифович]]
+|[[1921]]–[[1995]]
+|[[Петыркар|Ленинград]]
+|-
 |[[Морозов Виктор Петрович]]
 |[[1941]]–[[2000]]
 |[[Томск обласьт]]
