--- a/Коми_ним.mw
+++ b/Коми_ним.mw
@@ -44,6 +44,12 @@
 [[Категория:Нимъяс]]
 
 -->
+
+== Лыддьöтан ==
+* ''Кривощёкова-Гантман А.С.'' Русские фамилии коми пермяцкого происхождения //Языки и ономастика Прикамья. Пермь, 1973. С. 76–86.
+* ''Климов В.В.'' Миян фамиллёэз // Иньва, Кудымкар, 1987.
+* ''Теплоухов А. Ф.'' Фамилии и географические названия Пермяцкого края в этнографическом и историко-географическом отношениях // Коми му. 1925. 9 (19). Усть-Сысольск. С. 34.
+
 [[koi:Коми ниммез]]
 [[ru:Коми имя]]
 [[uk:Комі імена]]
