--- a/Коми_ним.mw
+++ b/Коми_ним.mw
@@ -25,7 +25,7 @@
 * Егор - Ёгор
 * Игнат - Игнать
 * Герасим - Ярасим
-* Геннадий - Гень
+* Геннадий - Гень, Геня, Генагей
 * Гаврил - Габö
 * Абрам - Öврам
 * Пантелеймон - Паньö
