--- a/Комиын_сьылысьяс.mw
+++ b/Комиын_сьылысьяс.mw
@@ -1,4 +1,4 @@
-Комиын сьылысьяс – Коми муын чужöм да Коми Республикаса сьылысьяслöн лыддьöг.
+'''Комиын сьылысьяс''' – Коми муын чужöм да Коми Республикаса сьылысьяслöн лыддьöг.
 
 {| border="1" cellpadding="4" cellspacing="0" style="border:1px solid #aaa; border-collapse:collapse"
 |- bgcolor="#ECECEC"
@@ -7,7 +7,7 @@
 ! Кöнi чужис
 |-
 |[[Булышева Вера Витальевна]]
-|[[1923]]
+|[[1970]]
 |[[Парч (Кулӧмдін район)|Парч]]
 |-
 |[[Есева Валентина Васильевна]]
@@ -18,6 +18,10 @@
 |[[1963]]
 |[[Аквад (Емдін район)|Аквад]]
 |-
+|[[Коротаева Альфия Саитнуровна]]
+|[[1959]]
+|[[Челябинск]]
+|-
 |[[Логинова Лидия Петровна]]
 |[[1954]]
 |[[Висер (Кӧрткерӧс район)|Висер]]
@@ -25,6 +29,10 @@
 |[[Пыстина Виктория Владимировна]]
 |[[1971]]
 |[[Том (Изьва район)|Том]]
+|-
+|[[Сосновская Ольга Александровна]]
+|
+|
 |-
 |[[Чувьюров Василий Николаевич]]
 |[[1938]]
