--- a/Коми_ним.mw
+++ b/Коми_ним.mw
@@ -1,48 +1,68 @@
-'''Коми ним''' тайӧ коми антропонимия.
+'''Коми нимъяс''' – тайӧ коми йӧзлӧн нимъяс.
 
-== Кристослы эскӧм нимъяслӧн коми формаяс ==
-=== Айморт нимъяс ===
-* Василий - Василей, Васьö, Вась
-* Александр - Öльöксан
-* Владимир - Володь, Ладе
-* Андрей - Öндрей, Öньö
-* Алексей - Öльöксей, Öльöш
-* Илья - Илля
-* Виктор - Виттор, Витьö
-* Николай - Микол, Микулай, Кольö, Микöла, Микöл
-* Пётр - Петыр, Петь
-* Фёдор - Педöр, Педь/Федь
-* Константин - Кöсьта
-* Сергей - Сегö, Серож
-* Григорий - Гриш
-* Семён - Сем
-* Михаил - Микайлö
-* Модест - Мӧдӧс
-* Митрофан - Митрук
-* Кондратий - Кон
-* Иван - Иван, Вань
-* Елизар - Елесь
-* Егор - Ёгор
-* Игнат - Игнать
-* Герасим - Ярасим
-* Геннадий - Гень, Геня, Генагей
-* Гаврил - Габö
-* Абрам - Öврам
-* Пантелеймон - Паньö
-* Тихон - Тикöн
-* Яков - Як
+== Кристос эскӧмкӧд йитчӧм нимъяслӧн коми гижанног ==
+=== Зон нимъяс ===
+* Абрам – Ӧврам
+* Александр – Ӧльӧксан, Ӧльӧ, Саш
+* Алексей – Ӧльӧксей, Ӧльӧш, Лёша
+* Андрей – Ӧндрей, Ӧньӧ
+* Афанасий – Опонь
+* Василий – Василей, Васьӧ, Вась
+* Виктор – Виттор, Витьӧ
+* Владимир – Володь, Ладе, Ладимер
+* Гаврил – Габӧ
+* Геннадий – Гень, Геня, Генагей
+* Герасим – Ярасим
+* Георгий – Ёгор, Егорей
+* Григорий – Гриш, Григорэй
+* Егор – Ёгор, Егорей
+* Елизар – Елесь
+* Иван – Иван, Вань, Ванько
+* Игнат – Игнать, Йигӧ
+* Игорь – Игор
+* Илья – Илля
+* Кондратий – Кон, Конӧ
+* Константин – Кӧсьта
+* Митрофан – Митрук
+* Михаил – Микайлӧ, Миш
+* Модест – Медӧс
+* Николай – Микол, Микул, Микулай, Кольӧ, Микӧла, Микӧл
+* Пантелеймон – Паньӧ, Паня
+* Пётр – Петыр, Петь, Петьӧ
+* Семён – Сем, Семӧ
+* Сергей – Сегӧ, Серёж
+* Тихон – Тикӧн
+* Фёдор – Педӧр, Педь/Федь
+* Яков – Як
+* Ярослав – Ярӧ
 
-=== Нывбаба нимъяс ===
-* Анастасия - Наста, Настук
-* Ольга - Öльга
-* Екатерина - Катьӧ
+=== Ныв нимъяс ===
+* Августа – Агӧ, Густа,
+* Авдотья – Ӧдя, Ӧдюш, Дуньӧ
+* Агафья – Гаша, Гашӧ, Ӧгаш
+* Агния – Агни, Агнюш
+* Аграфена – Аграпена, Грапӧ, Граньӧ, Ӧгра, Ӧгуш
+* Аксинья – Аксинь, Ӧксинь, Ӧксьӧ, Ӧкся
+* Акулина – Окиль, Ӧкуль
+* Анастасия – Наста, Настук
+* Валентина – Вальӧ
+* Екатерина – Катьӧ
+* Елизавета – Лиса
+* Ольга – Ӧльга
+* Мария – Машук, Машӧ
 
-=== Кристос кадöдз вöвлöм нимъяс ===
-Айморт нимъяс
+== Ӧнія кадся нимъяс ==
+===Айморт нимъяс===
+* Бияр
+* Вокан
 
-Абдай, Абла, Абукай, Абулек, Агей, Агиш, Адай, Аденай, Адибек, Адим, Аим, Аит, Айгельде, Айгуза, Айдуван, Айдуш, Айвак, Аймак, Аймет, Айплат, Айтукай, Азамат,Азег, Азьмат, Азыгей, Азямбердей, Аказ, Аканай, Акипай, Акмазик, Акманай, Акоза, Акпай, Акпарс, Акпас, Акпатыр, Аксай, Аксар, Аксаран, Аксÿн, Актай, Актан, Актанай, Актерек, Актубай, Актуган, Актыган, Актыгаш, Алатай, Албача, Алек, Алмадай, Алкай, Алмакай, Алман, Алмантай, Алпай, Алтыбай, Алтым, Алтыш, Алшик, Алым, Амаш, Анай, Ангиш, Андуган, Анзыл ,Аннти,Ансай, Аныкай, Апай, Апакай, Аписар, Аппак, Аптрий, Аптыш, Аразгелде, Арво,Ардаш,Арнас,Арпад, Арти,Артис,Асай, Асамук, Аскар, Аслан, Асмай, Атавай,Атас, Атачик, Атурай, Атюй, Ашкелде, Аштывай, Байкей, Бакей, Бакмат,Бач, Бела,Балян,Бердей,Биур,Болаж, Бурморт,Вавлё,Вай,Вакий, Валитпай, Вараш, Вачий, Вегеней,Ведэ, Ведяень ,Верморт,Веткан, Вечкомасонь ,Вирдянонь ,Виртанен ,Виряс, Вожья,Вокан,Волой, Вурспатыр, Вöли,Вэре, Вэретэта,Гачег,Герей,Гондыр,Гулень,Долгоза,Дыдык,Евилё, Евлё,Евлёхуплё,Евся,Ексей, Елгоза, Елос, Емеш, Епиш, Есеней, Ёрна, Жакы,Жебег,Жум, Жунег,Зайникай, Зенгул, Зилкай, Золтан,Зора ,Ибат, Ибрай, Ивук, Идулбай, Изамбай, Извай, Изерге, Изи ,Изикай, Изимар, Изырген, Икака, Иландай, Илбактай, Иликпай, Илмамат, Илсек, Ильмари ,Имай, Имакай, Иманай, Индыбай, Иоль,Ипай, Ипон, Иркебай, Иртег,Исан, Исменей, Истак, Итвер, Ити, Итыкай, Ишим, Ишкелде, Ишко, Ишмет, Ишпай ,Иштерек, Йиркап,Йолгыза, Йорай, Йормошкан, Йорок, Йуксерге ,Йуштерге, Йыланда, Йынаш, Кавик, Кавтась, Кавырля, Каганай, Казаклар, Казмир, Казулай,Кайсы, Какалей, Какся,Калеви ,Калуй,Кама, Камай, Камбар, Канай, Каний, Каныкий, Карантай, Карачей, Карман, Качак, Кебей, Кебяш, Кежеватонь ,Келдуш, Келтей, Кельмекей, Кендуган, Кенчывай, Кенживай, Керей, Кечим, Килимбай, Кильдуган, Кильдяш, Кимай, Кинаш, Кинду, Кирдяень ,Кирон,Кирыш, Киспелат, Кобей, Ковяж, Когой, Кождемыр, Кожер, Козаш, Койык,Кокор, Кокур, Кокша, Кокшавуй, Коломас ,Конакпай, Копон, Кори, Корхонен,Коскинен ,Куажы,Кубакай, Кугерге, Кугубай, Кудым,Кудэм,Кулмет, Кульбат, Культобей,Кульшет, Куляс, Куманай, Кумунзай, Кури, Курманай, Кÿртньыпатыр ,Кутÿрка,Кучко,Кучыран,Кыа, Кылак, Кыска,Лагат, Лайне ,Лаксын, Ламдо,Лапкай, Лапкас, Левентей, Лекай, Лотай, Лунег,Лымай,Лымаш,Лыско,Магаза, Мадий, Максак, Маматай, Мамич, Мамук, Мамулай, Мамут, Мандо,Манекай, Мардан, Маржан, Марка,Маска ,Маршан, Масай, Мекеш, Мелейка,Мемей, Миздя,Мичу, Мойсе, Москаень ,Муканай, Муликпай, Мустай, Мякеля ,Мякинен ,Неве,Ниеминен ,Нуякшонь ,Нуянза ,Ныдог,Нымог,Нялай,Овдек, Овром, Овтай ,Одег,Одыган, Озамбай, Озанай ,Озати, Окаш, Окса,Олави,Олдыган, Онар, Онни ,Онто, Ончеп, Орай, Орлай, Ормик, Орсай, Орчама, Опкын, Оскай, Ослам, Ошай, Ошерге ,Ошкелде,Ошлапей, Ошпай, Öрöзöй, Öртöмö, Пааво,Пайбахта, Пайберде, Пайгаш, Пайгиш, Пайгул, Пайгус, Пайгыт, Пайдер, Пайдуш, Паймас, Паймет, Паймурза, Паймыр, Пайсар, Пакай, Пакей, Пакий, Пакит, Паксют ,Пактек, Пакшай, Палдай, Паля,Паляйка,Пам,Пангелде, Парастай, Парсай ,Паруш ,Пасьывы, Патай, Патый, Патык, Патыраш, Пашатлей, Пашбек, Пашкан, Пегаш, Пегеней, Пекей, Пекеш, Пекка,Пекоза, Пекпатыр, Пекпулат, Пектан, Пекташ, Пектек, Пектубай, Пектыган, Пекшик, Петиган, Пекмет, Пера,Пибакай, Пибулат, Пивцаень, Пидалай,Пиль-вань, Пислэг,Пичай, Поголти, Позанай, Покай, Полтыш, Помбей, Поняй, Пор, Порандай, Порзай, Посак, Посибей, Пукси,Пулат,Пучетэта, Пыно,Пыргынде, Ратег,Роткай, Ряжан, Сабати, Савай, Савак, Сават, Савий, Савли, Сагет, Саин, Сайпытен, Сайтук, Сакай, Салдай, Салдуган, Салдык, Салмандай, Салмиян, Самай, Самукай, Самут, Санин, Санук, Сапай, Сапан, Сапар, Сарагора,Саран, Сарапай, Сарбос, Сарвай, Сардай, Саркандай, Сарман, Сарманай, Сармат, Саслык, Сатай, Саткай, Сезе, Сезяй,Семекей, Семендей, Сень-вань,Сетяк,Сё, Сибай, Сиделай,Сидулай , Сидуш, Сидыбай, Сипатыр, Сотнай,Степь-вань, Суангул, Субай, Султан, Сурманай, Суртан,Сусуе,Сусуй ,Сыресень,Сэдык, Сэктэв,Сэро,Сю-мерьге ,Сядей,Сяла,Тав,Тавгал, Тайвылат, Тайгельде, Тайыр, Талмек, Тамас, Танай, Танакай, Танагай, Танатар, Тант, Туган, Яур
+=== Ныв нимъяс ===
+* Авъя
+* Райда
+* Нюмина
 
 == Ӧшмӧс  ==
+* [[Безносикова Люция Михайловна|Безносикова Л.М.]], [[Айбабина Евгения Авенировна|Айбабина Е.А.]], [[Коснырева Раиса Ивановна|Коснырева Р.И.]] Коми-роч кывчукӧр: 31000 кымын кыв. – [[Сыктывкар]]: [[Коми небöг лэдзанiн]], [[2000]]. – 816 л.б.
 * [[Кривощёкова-Гантман Антонина Семёновна|''Кривощёкова-Гантман А.С.'']] Русские фамилии коми пермяцкого происхождения // Языки и ономастика Прикамья. – [[Пермь]], [[1973]]. – С. 76–86.
 * [[Климов Василий Васильевич|''Климов В.В.'']] Миян фамиллёэз // Иньва. – [[Кудымкар]], [[1987]].
 * ''Теплоухов А. Ф.'' Фамилии и географические названия Пермяцкого края в этнографическом и историко-географическом отношениях // [[Коми му (журнал)|Коми му]]. – [[Усть-Сысольск]], [[1925]]. – № 9 (19). – С. 34.
