*Empty MediaWiki Message*

--- a/Комиын_СССР-са_геройяс.mw
+++ b/Комиын_СССР-са_геройяс.mw
@@ -1,8 +1,8 @@
 '''Комиын СССР-са геройяс''' – лыддьӧг, кытчö пыртöма Коми муын чужöм, [[Коми АССР]]-са военкоматъясöн босьтöм да [[Айму вӧсна Ыджыд тыш]] бöрын [[Коми Республика]]ö дыр кежлö олöм могысь локтöм СССР-са Геройяс – [[Айму вӧсна Ыджыд тыш]] вылӧ ветлысьяс.
 
 СССР-са Герой почёт звание вöлi сетöма пöшти 12700 мортлы. 
-Коми муö бöр воис гортас ловйöн СССР-са 14 герой. 27-сьыс 14 мортыс – чужлiсны Коми муын.
-Фронтöвöй специальносьт серти Герой пиын: 13 стрелок, 4 артиллерист, 3 сапёр, 3 лётчик, 2 разведчик, 1 саридзса пехотинеч и 1 снайпер.
+Коми муö бöр воис гортас ловйöн СССР-са 14 герой. 28-сьыс 14 мортыс – чужлiсны Коми муын.
+Фронтöвöй специальносьт серти Герой пиын: 13 стрелок, 4 артиллерист, 4 лётчик, 3 сапёр, 2 разведчик, 1 саридзса пехотинеч и 1 снайпер.
 
 {| border="1" cellpadding="4" cellspacing="0" style="border:1px solid #aaa; border-collapse:collapse"
 |- bgcolor="#ECECEC"
@@ -11,6 +11,12 @@
 ! Кöнi чужис
 ! Кор сетiсны
 ! Медаль номер
+|-
+|[[Агамиров Гога Григорьевич]]
+|[[1916]]–[[1997]]
+|[[Грозный]]
+|[[1944]]
+|4529
 |-
 |[[Бабиков Макар Андреевич]]
 |[[1921]]–[[2009]]
