--- a/Джиян_(Кӧрткерӧс_район).mw
+++ b/Джиян_(Кӧрткерӧс_район).mw
@@ -89,8 +89,8 @@
 
 == Тöдчана лоöмторъяс ==
 == Тöдчана йöз ==
-* Попов Геннадий Иванович ([[1952]]) – [[коми гижысь]] да [[Комиын шылад тэчысьяс|шылад тэчысь]].
- 
+* [[Попов Геннадий Иванович]] ([[1952]]) – [[коми гижысь]] да [[Комиын шылад тэчысьяс|шылад тэчысь]].
+
 == Öшмöсъяс ==
 * [[Жеребцов Игорь Любомирович|''Жеребцов И.Л.'']] Где ты живешь: Населенные пункты Республики Коми. Историко-демографический справочник. – [[Сыктывкар]], [[2000]].
 * ''Панюков И.М.'' Висер вож да сэтчöс олысьяс йылысь пасйöдъяс. – [[Кӧрткерӧс]], [[1999]].
